--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "npm start",
     "client": "npm start --prefix client",
-    "build": "cd client && npm install && npm run build"
+    "build": "npm install && cd client && npm intall && npm run build"
   },
   "keywords": [],
   "author": "",
