--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
+    "debug": "^4.4.1",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-jwt": "^8.5.1",
